Update crate references

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -14,8 +14,8 @@ members = [
     "crates/nym-vpn-account-controller",
     "crates/nym-vpn-api-client",
     "crates/nym-vpn-cli",
-    "crates/nym-vpn-discover",
     "crates/nym-vpn-lib",
+    "crates/nym-vpn-network-config",
     "crates/nym-vpn-proto",
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
