--- a/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nym-vpn-discover"
+name = "nym-vpn-network-config"
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
