Extract discover crate and provide uniffi API to fetch environment (#1418)
* Extract out env discovery to it's own crate

* Add uniffi function to fetch the environment

* Return proper type

* Return full network setup in vpnd info response

* Rename crate to nym-vpn-network-config

* Update crate references

* Crate refs in code

* Add doc comment about exporting the environment

* Update generated uniffi files

* Update response handling in nym-vpn-app

* Update generated uniffi files

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "crates/nym-vpn-api-client",
     "crates/nym-vpn-cli",
     "crates/nym-vpn-lib",
+    "crates/nym-vpn-network-config",
     "crates/nym-vpn-proto",
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
