--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -52,6 +52,7 @@ nym-validator-client.workspace = true
 nym-vpn-account-controller = { path = "../nym-vpn-account-controller" }
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-lib = { path = "../nym-vpn-lib" }
+nym-vpn-network-config = { path = "../nym-vpn-network-config" }
 nym-vpn-proto = { path = "../nym-vpn-proto" }
 nym-vpn-store = { path = "../nym-vpn-store" }
 
