Implement non-blocking command dispatch in account controller

--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -31,3 +31,5 @@ tokio-util.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
+uuid = "1.11"
+futures.workspace = true
