--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -18,11 +18,11 @@ jobs:
       fail-fast: false
       matrix:
         # os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
-        os: [custom-runner-mac-m1] #, arc-ubuntu-22.04]
+        os: [arc-ubuntu-22.04, custom-runner-mac-m1]
         target: [native]
         include:
-          # - os: arc-ubuntu-22.04
-          #   target: android
+          - os: arc-ubuntu-22.04
+            target: android
           - os: custom-runner-mac-m1
             target: ios
     runs-on: ${{ matrix.os }}
