--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -123,6 +123,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tun = { version = "0.6.1", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
+uuid = "1.11"
 vergen = { version = "8.3.1", default-features = false }
 windows-sys = "0.52"
 x25519-dalek = "2.0"
@@ -135,6 +136,7 @@ nym-client-core = { git = "https://github.com/nymtech/nym", branch = "release/20
 nym-compact-ecash = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-config = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-contracts-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
+nym-credential-proxy-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-credential-storage = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-credentials = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-credentials-interface = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
