--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -9,8 +9,10 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+futures.workspace = true
 nym-compact-ecash.workspace = true
 nym-config.workspace = true
+nym-credential-proxy-requests.workspace = true
 nym-credential-storage.workspace = true
 nym-credentials-interface.workspace = true
 nym-credentials.workspace = true
@@ -32,4 +34,3 @@ tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
 uuid = "1.11"
-futures.workspace = true
