--- a/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
@@ -18,6 +18,7 @@ itertools.workspace = true
 nym-compact-ecash.workspace = true
 nym-config.workspace = true
 nym-contracts-common.workspace = true
+nym-credential-proxy-requests.workspace = true
 nym-credentials-interface.workspace = true
 nym-crypto = { workspace = true, features = ["asymmetric"] }
 nym-ecash-time.workspace = true
