--- a/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+itertools.workspace = true
 reqwest = { workspace = true, default-features = false, features = [
     "blocking",
     "rustls-tls",
