--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 futures.workspace = true
+# nym-client-core = { workspace = true, features = ["cli", "fs-credentials-storage", "fs-surb-storage", "fs-gateways-storage"] }
 nym-compact-ecash.workspace = true
 nym-config.workspace = true
 nym-credential-proxy-requests.workspace = true
@@ -33,4 +34,6 @@ tokio-util.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
+
 uuid = "1.11"
+si-scale = "0.2.3"
