--- a/nym-vpn-apple/Daemon/Info.plist
+++ b/nym-vpn-apple/Daemon/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleName</key>
 	<string>NymVPNHelper</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0-alpha.1</string>
+	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>10</string>
 	<key>SMAuthorizedClients</key>
