Handle error response when fetching discovery endpoint (#1452)
* Handle error response when fetching discovery endpoint

* Attempt to read existing file if refreshing fails

* Generate default impl from json file

* Write mainnet default file if missing

* Setup registered environments

* tidy

* log

--- a/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+itertools.workspace = true
 reqwest = { workspace = true, default-features = false, features = [
     "blocking",
     "rustls-tls",
@@ -18,7 +19,11 @@ reqwest = { workspace = true, default-features = false, features = [
 nym-config.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+tempfile.workspace = true
 tokio = { workspace = true, features = ["time", "macros"] }
 tokio-util.workspace = true
 tracing.workspace = true
 url = { workspace = true, features = ["serde"] }
+
+[build-dependencies]
+serde_json.workspace = true
