--- a/nym-vpn-app/.pkg/aur/PKGBUILD
+++ b/nym-vpn-app/.pkg/aur/PKGBUILD
@@ -18,7 +18,6 @@ provides=('nym-vpn-app')
 conflicts=('nymvpn-x' 'nym-vpn-app')
 options=(!debug)
 source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/$_release_tag.tar.gz"
-    'nym-vpn-wrapper.sh'
     'nym-vpn.desktop'
     'nym-vpn.svg')
 sha256sums=()
@@ -27,7 +26,7 @@ _srcdir="nym-vpn-client-$_release_tag"
 prepare() {
   pushd "$_srcdir"
 
-  # rip off all useless sources
+  # rip off useless sources
   rm -rf nym-vpn-android
   rm -rf nym-vpn-apple
   popd
@@ -58,8 +57,7 @@ package() {
   install -Dm755 "src-tauri/target/release/nym-vpn-app" "$pkgdir/usr/bin/nym-vpn-app"
   popd
 
-  install -Dm755 "nym-vpn-wrapper.sh" "$pkgdir/usr/bin/nym-vpn-wrapper.sh"
-  install -Dm644 "nym-vpn.desktop"    "$pkgdir/usr/share/applications/nym-vpn.desktop"
-  install -Dm644 "nym-vpn.svg"        "$pkgdir/usr/share/icons/nym-vpn.svg"
+  install -Dm644 "nym-vpn.desktop" "$pkgdir/usr/share/applications/nym-vpn.desktop"
+  install -Dm644 "nym-vpn.svg" "$pkgdir/usr/share/icons/hicolor/scalable/apps/nym-vpn.svg"
 }
 
