--- a/nym-vpn-app/.pkg/flatpak/net.nymtech.NymVPN.yml
+++ b/nym-vpn-app/.pkg/flatpak/net.nymtech.NymVPN.yml
@@ -28,23 +28,12 @@ modules:
         path: net.nymtech.NymVPN.metainfo.xml
       - type: file
         path: ../app.desktop
-      - type: script
-        dest-filename: run.sh
-        # wrapper script to set the needed environment variables
-        commands:
-          # use `WEBKIT_DISABLE_DMABUF_RENDERER=1` to fix an issue with NVIDIA gpu
-          # https://github.com/nymtech/nym-vpn-client/issues/305
-          - |
-            if [ -c /dev/nvidia0 ]; then
-              export WEBKIT_DISABLE_DMABUF_RENDERER=1
-            fi
-            LOG_FILE=1 /app/bin/nym-vpn "$@"
       - type: file
         path: ../icon.svg
     build-commands:
       - install -Dm755 nym-vpn /app/bin/nym-vpn
-      - install -Dm755 run.sh /app/bin/run.sh
-      - sed -i "s/^Icon=.*/Icon=net.nymtech.NymVPN/" app.desktop
+      - desktop-file-edit --set-key=Exec --set-value='env LOG_FILE=1 RUST_LOG=info nym-vpn %U' app.desktop
+      - desktop-file-edit --set-icon=net.nymtech.NymVPN app.desktop
       - install -Dm644 app.desktop /app/share/applications/net.nymtech.NymVPN.desktop
       - install -Dm644 icon.svg /app/share/icons/hicolor/scalable/apps/net.nymtech.NymVPN.svg
       - install -Dm644 net.nymtech.NymVPN.metainfo.xml /app/share/metainfo/net.nymtech.NymVPN.metainfo.xml
