Extend network discovery system
Extend network discovery system and add support for pulling from the
vpn-api:

- System messages
- Feature flags
- Account links

--- a/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-network-config/Cargo.toml
@@ -20,10 +20,12 @@ nym-config.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tempfile.workspace = true
+time = { workspace = true, features = ["serde-human-readable"] }
 tokio = { workspace = true, features = ["time", "macros"] }
 tokio-util.workspace = true
 tracing.workspace = true
 url = { workspace = true, features = ["serde"] }
+futures-util = "0.3"
 
 [build-dependencies]
 serde_json.workspace = true
