Move code around

--- a/nym-vpn-core/crates/nym-wg-gateway-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-wg-gateway-client/Cargo.toml
@@ -10,11 +10,13 @@ license.workspace = true
 
 [dependencies]
 nym-authenticator-requests.workspace = true
+nym-bandwidth-controller.workspace = true
 nym-credentials-interface.workspace = true
 nym-crypto.workspace = true
 nym-node-requests.workspace = true
 nym-pemstore.workspace = true
 nym-sdk.workspace = true
+nym-validator-client.workspace = true
 nym-wireguard-types.workspace = true
 rand.workspace = true
 thiserror.workspace = true
