--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "lib", "staticlib"]
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
+si-scale.workspace = true
 bincode.workspace = true
 bs58.workspace = true
 bytes.workspace = true
