Handle mixnet packet statistics events

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -98,6 +98,7 @@ rust2go = "0.3.16"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
+si-scale = "0.2.3"
 signature = "2.2.0"
 strum = "0.26"
 strum_macros = "0.26"
