--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -26,6 +26,7 @@ nym-vpn-store = { path = "../nym-vpn-store" }
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+si-scale.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
 thiserror.workspace = true
@@ -34,6 +35,4 @@ tokio-util.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
-
-uuid = "1.11"
-si-scale = "0.2.3"
+uuid.workspace = true
