--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -35,6 +35,7 @@ members = [
 # nym-compact-ecash = { path = "../../nym/common/nym_offline_compact_ecash" }
 # nym-config = { path = "../../nym/common/config" }
 # nym-contracts-common = { path = "../../nym/common/cosmwasm-smart-contracts/contracts-common" }
+# nym-credential-proxy-requests = { path = "../../nym/nym-credential-proxy/nym-credential-proxy-requests" }
 # nym-credential-storage = { path = "../../nym/common/credential-storage" }
 # nym-credentials = { path = "../../nym/common/credentials" }
 # nym-credentials-interface = { path = "../../nym/common/credentials-interface" }
