--- a/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-account-controller/Cargo.toml
@@ -27,7 +27,7 @@ reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 si-scale.workspace = true
-strum.workspace = true
+strum = { workspace = true, features = ["derive"] }
 strum_macros.workspace = true
 thiserror.workspace = true
 time.workspace = true
