--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -76,6 +76,9 @@ nym-vpn-store = { path = "../nym-vpn-store" }
 nym-wg-gateway-client = { path = "../nym-wg-gateway-client" }
 nym-wg-go = { path = "../nym-wg-go" }
 
+[target.'cfg(unix)'.dependencies]
+nix = { workspace = true, features = ["socket", "net", "fs"] }
+
 [target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
 nym-routing = { path = "../nym-routing" }
 nym-dns = { path = "../nym-dns" }
@@ -84,14 +87,10 @@ nym-dns = { path = "../nym-dns" }
 android_logger = "0.14.1"
 err-derive = "0.3.1"
 jnix = { version = "=0.5.1", features = ["derive"] }
-nix = { workspace = true, features = ["socket", "net"] }
 rand.workspace = true
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 oslog = "0.2.0"
-
-[target.'cfg(target_os = "ios")'.dependencies]
-nix = { workspace = true, features = ["socket", "net"] }
 
 [build-dependencies]
 uniffi = { workspace = true, features = ["build"] }
