--- a/nym-vpn-apple/Envs/mainnet.env
+++ b/nym-vpn-apple/Envs/mainnet.env
@@ -23,6 +23,6 @@ REWARDING_VALIDATOR_ADDRESS=n10yyd98e2tuwu0f7ypz9dy3hhjw7v772q6287gy
 STATISTICS_SERVICE_DOMAIN_ADDRESS=https://mainnet-stats.nymte.ch:8090
 NYXD=https://rpc.nymtech.net
 NYM_API=https://validator.nymtech.net/api/
-NYXD_WS=wss://rpc.nymtech.net/websocket
+NYXD_WS=wss://rpc.nymtech.net/websocket/
 EXPLORER_API=https://explorer.nymtech.net/api/
 NYM_VPN_API=https://nymvpn.com/api/
